Issue #2033885 by hass, quicksketch: Redirection location inline textfield should not be wrapped in normal form wrappers.

--- a/css/webform-admin.css
+++ b/css/webform-admin.css
@@ -99,9 +99,6 @@ table.webform-file-extensions input.form-text {
 .webform-container-inline div.form-item {
   display: inline;
 }
-.webform-default-value {
-  color: #999;
-}
 .webform-results-per-page a.selected {
   font-weight: bold;
 }
